src/commons/Button/Button.module.scss
@use "../../../styles/variables" as var;


.button{
    background-color: var.$orange;
    padding: 16px 27px;
    color: var.$white;
    border-radius: 10px;
    font-family: var.$manrope;
    font-weight: bold;
    cursor: pointer;
    box-shadow: none;
    border: none;
    transition-property: box-shadow;
    transition-duration: 300ms;
    transition-timing-function: ease-in-out;

    &:hover{
        box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.25);
    }
}

.roundedButton{
    cursor: pointer;
    padding: 12px 32px;
    border-radius: 24px;
    background: none;
    font-family: var.$gothic;
    font-weight: 700;
    font-size: var.$body-regular;
    color: var.$black;
    width: 172px;

    box-shadow: none;
    border: 2px black solid;
    transition-property: box-shadow;
    transition-duration: 300ms;
    transition-timing-function: ease-in-out;

    &:hover{
      box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.1);
      background-color: var.$orange;
      border: none;
      color: var.$white;
    }
}

